# HelloBrain

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloBrain  setup.txt
GUI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloBrain
GUI/src/: main.cpp
layout/: hellobrain.ui  style.css
layout/Cambalache/: helloBrain.cmb  hellobrain.ui
output/:  No-0.txt   No-1.txt   No-2.txt   No-3.txt   No-4.txt   No-5.txt   No-6.txt   No-7.txt   No-8.txt   No-9.txt   Yes-0.txt   Yes-1.txt   Yes-2.txt   Yes-3.txt   Yes-4.txt   Yes-5.txt   Yes-6.txt   Yes-7.txt   Yes-8.txt   Yes-9.txt  ...-1.txt  ...-10.txt  ...-13.txt  ...-16.txt  ...-19.txt  ...-22.txt  ...-25.txt  ...-28.txt  ...-4.txt  ...-7.txt
output/Session_1/: No_100.txt  No_98.txt  No_99.txt  Yes_100.txt  Yes_98.txt  Yes_99.txt
src/: control.cpp  eeg.cpp  helloBrain.cpp  main.cpp  plotter.cpp
src/includes/: files.cpp  strings.cpp  ui.cpp
